# airflowtest

./: .gitignore  pyproject.toml  scheduler_exec.sh  webserver_exec.sh
config/: airflow_nginx_default
dags/: comic_app_v1.py  comic_app_v2.py  comic_app_v3.py  download_stock_price.py  settings.py
